--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,10 +33,12 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.5
-  flutter_riverpod: ^2.1.1
-  go_router: ^5.2.4
+  flutter_riverpod: ^2.1.3
   sidebarx: ^0.14.0
   easy_sidemenu: ^0.4.1
+  google_fonts: ^3.0.1
+  firebase_core: ^2.4.0
+  url_launcher: ^6.1.7
 
 dev_dependencies:
   flutter_test:
